// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormLabel > should render & hover if optional 1`] = `
<DocumentFragment>
  <label
    class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex text-sm leading-[17px] font-semibold transition-colors duration-100"
    data-testid="FormLabel"
  >
    Test
    <span
      aria-describedby="tippy-1"
      class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
      data-testid="FormLabel__optional"
    >
      optional
    </span>
  </label>
</DocumentFragment>
`;

exports[`FormLabel > should render with name from context 1`] = `
<DocumentFragment>
  <label
    class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex text-sm leading-[17px] font-semibold transition-colors duration-100"
    data-testid="FormLabel"
    for="test"
  >
    Test Label
  </label>
</DocumentFragment>
`;
